# speech-to-text

./: README.md  main.py  pyproject.toml  requirements.txt  voice_to_text.py  whisper-assistant-1.2.4.vsix
voice_to_text/: __init__.py  audio.py  tray.py
